// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Navigation component Should render guest user navigation 1`] = `
<nav
  className="nav"
>
  <div
    className="logo-container"
  >
    <img
      src="https://www.formula1.com/etc/designs/fom-website/images/f1_logo.svg"
    />
  </div>
  <div
    className="links-container"
  >
    <a
      href="/latest"
      onClick={[Function]}
    >
      Latest
    </a>
    <a
      href="/video"
      onClick={[Function]}
    >
      Video
    </a>
    <a
      href="/schedule"
      onClick={[Function]}
    >
      Schedule
    </a>
    <a
      href="/standings"
      onClick={[Function]}
    >
      Standings
    </a>
    <a
      href="/drivers"
      onClick={[Function]}
    >
      Drivers
    </a>
    <a
      href="/teams"
      onClick={[Function]}
    >
      Teams
    </a>
  </div>
  <div
    className="auth-container"
  >
    <a
      className="link"
      href="/auth/login"
      onClick={[Function]}
    >
      Sign in
    </a>
    <a
      className="link"
      href="/auth/register"
      onClick={[Function]}
    >
      Register
    </a>
  </div>
</nav>
`;

exports[`test Navigation component Should render logged in user Navigation 1`] = `
<nav
  className="nav"
>
  <div
    className="logo-container"
  >
    <img
      src="https://www.formula1.com/etc/designs/fom-website/images/f1_logo.svg"
    />
  </div>
  <div
    className="links-container"
  >
    <a
      href="/latest"
      onClick={[Function]}
    >
      Latest
    </a>
    <a
      href="/video"
      onClick={[Function]}
    >
      Video
    </a>
    <a
      href="/schedule"
      onClick={[Function]}
    >
      Schedule
    </a>
    <a
      href="/standings"
      onClick={[Function]}
    >
      Standings
    </a>
    <a
      href="/drivers"
      onClick={[Function]}
    >
      Drivers
    </a>
    <a
      href="/teams"
      onClick={[Function]}
    >
      Teams
    </a>
  </div>
  <div
    className="auth-container"
  >
    <a
      className="link"
      href="/auth/profile"
      onClick={[Function]}
    >
      Profile
    </a>
  </div>
</nav>
`;
